hphp/hack/test/typecheck/tests_bypass_visibility/internal_abstract_class.php.exp
ERROR: File "internal_abstract_class.php--non_test.php", line 5, characters 16-31:
Cannot access an internal element from module `m` in the default module (Typing[4444])
  File "internal_abstract_class.php--defs.php", line 12, characters 16-31:
  This is from module `m`
